k8s/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messenger
  annotations:
    argocd.argoproj.io/sync-wave: "4"
spec:
  ingressClassName: traefik
  rules:
    - host: messenger.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
